tests/sksl/errors/EnumTypeCoercion.glsl
### Compilation failed:

error: 5: cannot construct 'E'
1 error
